refactor: update swagger
